--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,10 @@ serde_derive = "1.0"
 criterion = "0.3.0"
 rand = "0.7.2"
 
+[dependencies]
+rand = {version = "0.7.2", optional = true}
+
+
 [[bench]]
 name = "bls381"
 harness = false
@@ -85,3 +89,4 @@ rsa3072 = []
 rsa4096 = []
 secp256k1 = []
 bench = ["all"]
+onchain = []
